restaurando a pasta html padrao

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -1,7 +1,7 @@
 server {
     index index.php index.html index.html;
     server_name php-docker.local;
-    root /var/www;
+    root /var/www/html;
 
     location / {
         try_files $uri /index.php?$args;
